<resources>
    <string name="app_name">SlayerCompanion</string>
    <string name="app_display_name">Slayer Companion</string>
    <string name="options_lowercase">options</string>
    <string name="ams_welcome">Welcome to the Slayer Companion app for Runescape!</string>
    <string name="ams_select_masters">Select one of the masters below to get started!</string>
    <string name="turael_spria">Turael/Spria</string>
    <string name="mazchna_achtryn">Mazchna/Achtryn</string>
    <string name="vannaka">Vannaka</string>
    <string name="sumona">Sumona</string>
    <string name="chaeldar">Chaeldar</string>
    <string name="duradel_lapalok">Duradel/Lapalok</string>
    <string name="kuradal">Kuradal</string>
    <string name="morvran">Morvran</string>
    <string-array name="turael_spria_monsters">
        <item>Adolescent White wolf</item>
        <item>Albino bat</item>
        <item>Angry bear</item>
        <item>Angry goblin</item>
        <item>Armoured zombie</item>
        <item>Arrg</item>
        <item>Baby Roc</item>
        <item>Banshee</item>
        <item>Banshee mistress</item>
        <item>Bat</item>
        <item>Bear Cub</item>
        <item>Berry</item>
        <item>Big Wolf</item>
        <item>Bird</item>
        <item>Black bear</item>
        <item>Black Guard</item>
        <item>Black Guard Berserker</item>
        <item>Black Guard crossbowdwarf</item>
        <item>Blessed spider</item>
        <item>Cave bug</item>
        <item>Cave goblin</item>
        <item>Cave goblin guard</item>
        <item>Cave goblin miner</item>
        <item>Cave slime</item>
        <item>Cerberus</item>
        <item>Chaos dwarf</item>
        <item>Chaos dwarf (Heart of Gielinor)</item>
        <item>Chaos dwarf hand cannoneer</item>
        <item>Chicken</item>
        <item>Chompy bird</item>
        <item>Cliff</item>
        <item>Cow</item>
        <item>Cow calf</item>
        <item>Crawling hand</item>
        <item>Crypt spider</item>
        <item>Dad</item>
        <item>Deadly red spider</item>
        <item>Desert Lizard</item>
        <item>Desert wolf</item>
        <item>Dire Wolf</item>
        <item>Drake</item>
        <item>Dried zombie</item>
        <item>Duck</item>
        <item>Duke</item>
        <item>Dungeon rat</item>
        <item>Dungeon spider</item>
        <item>Dwarf</item>
        <item>Dwarf gang member</item>
        <item>Dynamite</item>
        <item>Entrana firebird</item>
        <item>Evil Chicken</item>
        <item>Fenris wolf</item>
        <item>Fenris wolf (Sköll)</item>
        <item>Fever spider</item>
        <item>Gelatinous abomination</item>
        <item>General malpractitioner</item>
        <item>Ghost</item>
        <item>Ghost (Melzar\'s Maze)</item>
        <item>Ghostly warrior</item>
        <item>Giant bat</item>
        <item>Giant crypt spider</item>
        <item>Giant lobster</item>
        <item>Giant lobster (Ghosts Ahoy)</item>
        <item>Giant Roc</item>
        <item>Giant skeleton (Shadow Dungeon)</item>
        <item>Giant skeleton (Tarn\'s Lair)</item>
        <item>Giant spider</item>
        <item>Goblin</item>
        <item>Goblin Champion</item>
        <item>Goblin guard (Observatory)</item>
        <item>Goblin Raider</item>
        <item>Grave scorpion</item>
        <item>Grizzly bear</item>
        <item>Grizzly bear cub</item>
        <item>Grotworm</item>
        <item>Guard (cave goblin)</item>
        <item>Guard dog</item>
        <item>Guard dog (Sinkholes)</item>
        <item>Hilda</item>
        <item>Hollowtoof</item>
        <item>Ice spider</item>
        <item>Ice troll</item>
        <item>Ice troll female</item>
        <item>Ice troll grunt</item>
        <item>Ice Troll King</item>
        <item>Ice troll male</item>
        <item>Ice troll runt</item>
        <item>Ice wolf</item>
        <item>Icefiend</item>
        <item>Icefiend (Ghorrock)</item>
        <item>Jackal</item>
        <item>Jubbly bird</item>
        <item>Jungle spider</item>
        <item>Jungle Wolf</item>
        <item>King Scorpion</item>
        <item>Kraka</item>
        <item>Lizard</item>
        <item>Lumpnose</item>
        <item>The Map</item>
        <item>Mature grotworm</item>
        <item>Mighty banshee</item>
        <item>Minotaur</item>
        <item>Monkey</item>
        <item>Monkey Archer</item>
        <item>Monkey Guard</item>
        <item>Monkey Guard (ninja)</item>
        <item>Monkey Zombie</item>
        <item>Mosschin</item>
        <item>Mountain troll</item>
        <item>Mountain troll (well)</item>
        <item>Mounted terrorbird gnome</item>
        <item>Oipuis</item>
        <item>Oomlie bird</item>
        <item>Ouhai</item>
        <item>Padulah</item>
        <item>Pee Hat</item>
        <item>Pekin</item>
        <item>Penguin (monster)</item>
        <item>Pernicious parrot</item>
        <item>Pig</item>
        <item>Pit Scorpion</item>
        <item>Poison Scorpion</item>
        <item>Poison spider</item>
        <item>Redeyes</item>
        <item>Revenant cyclops</item>
        <item>Revenant dark beast</item>
        <item>Revenant demon</item>
        <item>Revenant dragon</item>
        <item>Revenant goblin</item>
        <item>Revenant hellhound</item>
        <item>Revenant hobgoblin</item>
        <item>Revenant icefiend</item>
        <item>Revenant imp</item>
        <item>Revenant knight</item>
        <item>Revenant ork</item>
        <item>Revenant pyrefiend</item>
        <item>Revenant vampyre</item>
        <item>Revenant werewolf</item>
        <item>River troll</item>
        <item>Rock (monster)</item>
        <item>Rooster</item>
        <item>Scorpion</item>
        <item>Reborn warrior (Dungeoneering)</item>
        <item>Ice spider (Dungeoneering)</item>
        <item>Guard dog (Dungeoneering)</item>
        <item>Bat (Dungeoneering)</item>
        <item>Cave slime (Dungeoneering)</item>
        <item>Crawling hand (Dungeoneering)</item>
        <item>Ghost (Dungeoneering, monster)</item>
        <item>Scorpion (Ape Atoll)</item>
        <item>Seagull</item>
        <item>Sergeant Grimspike</item>
        <item>Sergeant Steelwill</item>
        <item>Sergeant Strongstack</item>
        <item>Shadow Hound</item>
        <item>Shadow spider</item>
        <item>Skeletal hand</item>
        <item>Skeletal miner</item>
        <item>Skeleton</item>
        <item>Skeleton (Ape Atoll)</item>
        <item>Skeleton (Barrows)</item>
        <item>Skeleton (Demon Slayer)</item>
        <item>Skeleton (Draynor Manor)</item>
        <item>Skeleton (Heart of Gielinor)</item>
        <item>Skeleton (Lumbridge Catacombs)</item>
        <item>Skeleton (Melzar\'s Maze)</item>
        <item>Skeleton (Smoking Kills)</item>
        <item>Skeleton (Tarn\'s Lair)</item>
        <item>Skeleton (Temple Trekking)</item>
        <item>Skeleton (Thok Your Block Off)</item>
        <item>Skeleton (Ullek)</item>
        <item>Skeleton archer</item>
        <item>Skeleton brute</item>
        <item>Skeleton fremennik</item>
        <item>Skeleton heavy</item>
        <item>Skeleton hero</item>
        <item>Skeleton Mage</item>
        <item>Skeleton mage (The Death of Chivalry)</item>
        <item>Skeleton thug</item>
        <item>Skeleton warlock</item>
        <item>Skeleton warlord</item>
        <item>Skeleton warrior</item>
        <item>Skoblin</item>
        <item>Small Lizard</item>
        <item>Snailfeet</item>
        <item>Snothead</item>
        <item>Sorebones</item>
        <item>Spectral attendant</item>
        <item>Spectral cultivator</item>
        <item>Spectral tender</item>
        <item>Spectral worshipper</item>
        <item>Spider</item>
        <item>Stick</item>
        <item>Stinkears</item>
        <item>Strongbones</item>
        <item>Summoned Zombie</item>
        <item>Super Cow</item>
        <item>Tenacious toucan</item>
        <item>Terrorbird</item>
        <item>Thrower Troll</item>
        <item>Tormented soul (Uncharted Isles)</item>
        <item>Tormented wraith</item>
        <item>Tortured soul (Port Phasmatys)</item>
        <item>Trade floor guard</item>
        <item>Troll brute</item>
        <item>Troll chucker</item>
        <item>Troll commando</item>
        <item>Troll father (Troll Invasion)</item>
        <item>Troll general</item>
        <item>Troll mage commando</item>
        <item>Troll ranger commando</item>
        <item>Troll runt</item>
        <item>Troll shaman</item>
        <item>Troll spectator</item>
        <item>Twig (monster)</item>
        <item>Ulfric</item>
        <item>Undead chicken</item>
        <item>Undead cow</item>
        <item>Undead one</item>
        <item>Uodai</item>
        <item>Uyoro</item>
        <item>Warped bat</item>
        <item>White wolf</item>
        <item>White wolf (Burthorpe)</item>
        <item>Wild dog</item>
        <item>Wizard (Troll Invasion)</item>
        <item>Wolf</item>
        <item>Wolf (Three\'s Company)</item>
        <item>Wormbrain</item>
        <item>Young grotworm</item>
        <item>Zogre</item>
        <item>Zombie</item>
        <item>Zombie (Ashdale)</item>
        <item>Zombie (Smoking Kills)</item>
        <item>Zombie cow</item>
        <item>Zombie hand</item>
        <item>Zombie pirate</item>
        <item>Zombie rat</item>
        <item>Zombie swab</item>
    </string-array>
</resources>